--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ a {
     font-size: 15px;
     color: #888787;
     font-weight: 600;
-    display: none;
+    /* display: none; */
 }
 
 /* -------------------------------------------------------------------------------------------------------------- */
