--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ a {
     width: 115px;
     height: 45px;
     border: 1px solid royalblue;
-    font-family: Avenir Next;
+    font-family: Raleway;
     font-weight: 600;
     font-size: 16px;
     color: rgb(88, 88, 88);
@@ -155,7 +155,7 @@ a {
     font-size: 15px;
     font-weight: 500;
     color: gray;
-    font-family: Avenir Next;
+    font-family: Raleway;
     margin-right: 15px;
 }
 
@@ -163,7 +163,7 @@ a {
     width: 135px;
     height: 45px;
     border: none;
-    font-family: Avenir Next;
+    font-family: Raleway;
     font-weight: 600;
     font-size: 16px;
     color: white;
