--- a/db_styles.css
+++ b/db_styles.css
@@ -1,7 +1,8 @@
 html, body {
-    font-family: Avenir Next;
+    font-family: Raleway, Avenir Next;
     padding: 0;
     margin: 0;
+    background-color: #edf1f5;
 }
 
 * {
@@ -26,3 +27,91 @@ a {
 }
 
 /* -------------------------------------------------------------------------------------------------------------- */
+
+#header {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#header div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#header #logo-top {
+    font-size: 30px;
+    font-weight: bold;
+    line-height: 40px;
+    border-bottom: 6px solid royalblue;
+}
+
+/* -------------------------------------------------------------------------------------------------------------- */
+
+#hero {
+    width: 100%;
+    text-align: center; 
+}
+
+#hero #title {
+    font-size: 32px;
+    font-weight: 700;
+    padding: 70px 15px 0 15px;
+}
+
+#hero #subtitle {
+    font-size: 16px;
+    color: #818181;
+    padding: 15px 35px 40px 35px;
+}
+
+#hero #social {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#hero #social i {
+    font-size: 20px;
+    color: #b6b6b6;
+    padding: 0 20px;
+}
+
+#hero #social i:hover {
+    color: royalblue;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+/* -------------------------------------------------------------------------------------------------------------- */
+
+#footer {
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #fff;
+}
+
+#footer p {
+    font-weight: 600;
+    font-size: 14px;
+}
+
+#footer p span {
+    margin: 0 7px;
+    font-size: 16px;
+    font-weight: bold;
+    /* line-height: 75px; */
+    padding: 2px 0;
+    border-bottom: 3px solid royalblue;   
+}
