--- a/db_styles.css
+++ b/db_styles.css
@@ -2,7 +2,6 @@ html, body {
     font-family: Raleway, Avenir Next;
     padding: 0;
     margin: 0;
-    background-color: #edf1f5;
 }
 
 * {
@@ -11,6 +10,7 @@ html, body {
     margin: 0;
     appearance: none;
     -webkit-appearance: none;
+    border: none;
 }
 
 img {
@@ -30,88 +30,171 @@ a {
 
 #header {
     width: 100%;
-    height: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#header div {
+    height: 75px;
+    text-align: left;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
 }
 
-#header #logo-top {
-    font-size: 30px;
+#header #logo {
+    width: 77px;
+    padding-left: 50px;
+    margin: auto 0;
+}
+
+#header #logo p {
     font-weight: bold;
-    line-height: 40px;
-    border-bottom: 6px solid royalblue;
+    font-size: 20px;
+    line-height: 27px;
+    border-bottom: 5px solid royalblue;
 }
 
-/* -------------------------------------------------------------------------------------------------------------- */
-
-#hero {
-    width: 100%;
-    text-align: center; 
-}
-
-#hero #title {
-    font-size: 32px;
-    font-weight: 700;
-    padding: 70px 15px 0 15px;
-}
-
-#hero #subtitle {
-    font-size: 16px;
-    color: #818181;
-    padding: 15px 35px 40px 35px;
-}
-
-#hero #social {
-    margin: 0 auto;
+#header #menu {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
+    margin: auto 40px;
 }
 
-#hero #social i {
-    font-size: 20px;
-    color: #b6b6b6;
+#header #menu p {
     padding: 0 20px;
+    margin: auto 0;
+    font-size: 15px;
+    font-weight: 600;
+    cursor: pointer;
 }
 
-#hero #social i:hover {
-    color: royalblue;
+#header #menu #sign-out-button {
+    width: 115px;
+    height: 40px;
+    border: 2px solid royalblue;
+    font-family: Raleway, Avenir Next;
+    border-radius: 100px;
+    font-size: 15px;
+    font-weight: 600;
+    margin: 0 20px;
     cursor: pointer;
+}
+
+#header #menu #add-project-button {
+    width: 40px;
+    height: 40px;
+    background-color: royalblue;
+    font-family: Raleway, Avenir Next;
+    border-radius: 100%;
+    font-size: 16px;
+    margin: 0 20px;
+    color: #fafafa;
+    cursor: pointer;
+}
+
+#header #menu #add-project-button:hover, #header #menu #sign-out-button:hover {
+    opacity: 0.75;
     transition: 0.5s;
 }
 
 /* -------------------------------------------------------------------------------------------------------------- */
 
-#footer {
-    width: 100%;
-    height: 60px;
-    position: absolute;
-    bottom: 0;
-    text-align: center;
-    background-color: red;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #fff;
+#projects {
+    width: 90%;
+    height: 300px;   
+    margin: 30px auto;
 }
 
-#footer p {
-    font-weight: 600;
+#projects #section-title {
+    font-size: 22px;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+#projects #stats {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-bottom: 20px;
+}
+
+#projects #stats p {
+    font-size: 15px;
+    color: #686464;
+}
+
+#projects #stats p span {
+    padding: 0 15px;
+    font-weight: bold;
+}
+
+#projects-dashboard {
+    width: 100%;
+    height: auto;
+}
+
+.dashboard-table {
+    background: none;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.dashboard-table tr {
+    margin: 10px 0;
+    height: 30px;
+}
+
+.dashboard-table .project-card {
+    height: 50px;
+    text-align: center;
+}
+
+.dashboard-table .project-card:hover {
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.dashboard-table thead {
+    color: #8a8a8a;
     font-size: 14px;
 }
 
-#footer p span {
-    margin: 0 7px;
-    font-size: 16px;
-    font-weight: bold;
-    /* line-height: 75px; */
-    padding: 2px 0;
-    border-bottom: 3px solid royalblue;   
+.dashboard-table tbody {
+    border-radius: 5px;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
 }
+
+.dashboard-table tr .options i {
+    padding: 0 10px;
+    color: #b3a9a9;
+}
+
+.dashboard-table tr .options i:hover {
+    opacity: 1;
+    color: royalblue;
+    transition: 0.5s;
+}
+
+.green-circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 100%;
+    background-color: #00b894;
+    margin: 0 auto;
+}
+
+.red-circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 100%;
+    background-color: #ff6b6b;
+    margin: 0 auto;
+}
+
+.yellow-circle {
+    width: 12px;
+    height: 12px;
+    border-radius: 100%;
+    background-color: #feca57;
+    margin: 0 auto;
+}
+
+/* -------------------------------------------------------------------------------------------------------------- */
