--- a/project.css
+++ b/project.css
@@ -246,40 +246,8 @@ a {
     justify-content: left;
 }
 
-.training-data-card {
-    width: 200px;
-    height: 150px;
-    background-color: #ffffff;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: center;
-}
-
-.training-data-card .training-data-class {
-    position: relative;
-    width: 40%;
-    height: 35px;
-    background: none;
-    border-bottom: 2px solid royalblue;
-    font-family: Raleway, Avenir Next;
-    font-size: 17px;
-    font-weight: 600;
-    text-align: center;
-    margin: 0 auto;
-}
-
-.training-data-card .num-training-instaces {
-    font-size: 15px;
-    color: #8c8d8d;
-    padding: 10px 0;
-}
-
 #choose-training-data {
-    display: none;
+    /* display: none; */
 }
 
 #training-data-choose-button {
@@ -322,4 +290,72 @@ a {
     cursor: pointer;   
     margin: 10px 0;   
     color: #8c8d8d;
+}
+
+.training-data-card {
+    width: 200px;
+    height: 150px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    overflow: hidden;
+}
+
+.training-data-card .training-data-class {
+    position: relative;
+    width: 90%;
+    height: 35px;
+    background: none;
+    border-bottom: 2px solid royalblue;
+    font-family: Raleway, Avenir Next;
+    font-size: 17px;
+    font-weight: 600;
+    text-align: center;
+    margin: 5px auto;
+}
+
+.training-data-card .num-training-instaces {
+    font-size: 15px;
+    color: #8c8d8d;
+    padding: 10px 0;
+}
+
+.tdc-top {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    background-color: red;
+}
+
+.tdc-bottom {
+    position: relative;
+    width: 100%;
+    height: 50%;
+    background-color: white;
+}
+
+.tdc-file-choose {
+    display: none;
+}
+
+.tdc-upload-button {
+    width: 100px;
+    height: 50px;
+    border: 2px solid royalblue;
+    font-family: Raleway, Avenir Next;
+    border-radius: 100px;
+    font-size: 15px;
+    font-weight: 600;
+    cursor: pointer;   
+    margin: 10px 0;
+}
+
+.tdc-upload-button i {
+    font-size: 20px;
+    color: #a3a8a8;
 }
