--- a/project.css
+++ b/project.css
@@ -240,15 +240,16 @@ a {
 #training-data-container {
     width: 100%;
     height: auto;
+    min-height: 225px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: left;
 }
 
-#choose-training-data {
-    /* display: none; */
-}
+/* #choose-training-data {
+    display: none;
+} */
 
 #training-data-choose-button {
     width: 100px;
@@ -308,28 +309,28 @@ a {
 
 .training-data-card .training-data-class {
     position: relative;
-    width: 90%;
+    width: 75%;
     height: 35px;
     background: none;
-    border-bottom: 2px solid royalblue;
+    border-bottom: 2px solid rgba(65, 105, 225, 0.5);
     font-family: Raleway, Avenir Next;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 600;
     text-align: center;
     margin: 5px auto;
 }
 
-.training-data-card .num-training-instaces {
-    font-size: 15px;
-    color: #8c8d8d;
-    padding: 10px 0;
+.training-data-card .num-training-instances {
+    font-size: 13px;
+    color: #4f5252;
+    padding: 5px 0;
 }
 
 .tdc-top {
     position: relative;
     width: 100%;
     height: 50%;
-    background-color: red;
+    background-color: #eee;
 }
 
 .tdc-bottom {
